more style fixes for inputs on iOS

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -696,6 +696,7 @@ input[type="text"],
 input[type="email"],
 input[type="search"],
 input[type="password"],
+input[type="url"],
 textarea {
   -webkit-appearance: none;
   	 -moz-appearance: none;
